--- a/common/common.scss
+++ b/common/common.scss
@@ -2,7 +2,7 @@
 
 img#site-logo.logo-small {
     border-radius: 50% !important;
-    background-color: #000 !important;
+    /* background-color: #000 !important; */
     -webkit-box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
     -moz-box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
     box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
