--- a/common/common.scss
+++ b/common/common.scss
@@ -1,12 +1,13 @@
 /* Global Tweaks */
-
+/* 
 img#site-logo.logo-small {
     border-radius: 50% !important;
-    /* background-color: #000 !important; */
+    background-color: #000 !important;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
     -moz-box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
     box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
 }
+ */
 .d-modal.create-account .login-welcome-header {
   padding: 1em !important;
 }
