--- a/common/common.scss
+++ b/common/common.scss
@@ -269,6 +269,7 @@ div.footnote-tooltip-content .iframe-expand-icon {
 
 /* Box-Shadow Divs */
 div[data-theme-boxed] {
+    margin: 0 auto;
     margin: 0 10px 10px;
     border-left: 0;
     background-color: var(--secondary);
@@ -278,6 +279,7 @@ div[data-theme-boxed] {
 }
 
 div[data-theme-boxed-95] {
+    margin: 0 auto;
     width: 95%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -288,6 +290,7 @@ div[data-theme-boxed-95] {
 }
 
 div[data-theme-boxed-90] {
+    margin: 0 auto;
     width: 90%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -298,6 +301,7 @@ div[data-theme-boxed-90] {
 }
 
 div[data-theme-boxed-85] {
+    margin: 0 auto;
     width: 85%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -308,6 +312,7 @@ div[data-theme-boxed-85] {
 }
 
 div[data-theme-boxed-80] {
+    margin: 0 auto;
     width: 80%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -318,6 +323,7 @@ div[data-theme-boxed-80] {
 }
 
 div[data-theme-boxed-75] {
+    margin: 0 auto;
     width: 75%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -328,6 +334,7 @@ div[data-theme-boxed-75] {
 }
 
 div[data-theme-boxed-70] {
+    margin: 0 auto;
     width: 70%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -338,6 +345,7 @@ div[data-theme-boxed-70] {
 }
 
 div[data-theme-boxed-66] {
+    margin: 0 auto;
     width: 66.666%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -348,6 +356,7 @@ div[data-theme-boxed-66] {
 }
 
 div[data-theme-boxed-65] {
+    margin: 0 auto;
     width: 65%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -358,6 +367,7 @@ div[data-theme-boxed-65] {
 }
 
 div[data-theme-boxed-60] {
+    margin: 0 auto;
     width: 60%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -368,6 +378,7 @@ div[data-theme-boxed-60] {
 }
 
 div[data-theme-boxed-55] {
+    margin: 0 auto;
     width: 55%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -378,6 +389,7 @@ div[data-theme-boxed-55] {
 }
 
 div[data-theme-boxed-50] {
+    margin: 0 auto;
     width: 50%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -388,6 +400,7 @@ div[data-theme-boxed-50] {
 }
 
 div[data-theme-boxed-45] {
+    margin: 0 auto;
     width: 45%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -398,6 +411,7 @@ div[data-theme-boxed-45] {
 }
 
 div[data-theme-boxed-40] {
+    margin: 0 auto;
     width: 40%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -408,6 +422,7 @@ div[data-theme-boxed-40] {
 }
 
 div[data-theme-boxed-35] {
+    margin: 0 auto;
     width: 35%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -418,6 +433,7 @@ div[data-theme-boxed-35] {
 }
 
 div[data-theme-boxed-33] {
+    margin: 0 auto;
     width: 33.333%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -428,6 +444,7 @@ div[data-theme-boxed-33] {
 }
 
 div[data-theme-boxed-30] {
+    margin: 0 auto;
     width: 30%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -438,6 +455,7 @@ div[data-theme-boxed-30] {
 }
 
 div[data-theme-boxed-25] {
+    margin: 0 auto;
     width: 25%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -448,6 +466,7 @@ div[data-theme-boxed-25] {
 }
 
 div[data-theme-boxed-20] {
+    margin: 0 auto;
     width: 20%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -458,6 +477,7 @@ div[data-theme-boxed-20] {
 }
 
 div[data-theme-boxed-15] {
+    margin: 0 auto;
     width: 15%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -468,6 +488,7 @@ div[data-theme-boxed-15] {
 }
 
 div[data-theme-boxed-10] {
+    margin: 0 auto;
     width: 10%;
     margin: 0 10px 10px;
     border-left: 0;
@@ -478,6 +499,7 @@ div[data-theme-boxed-10] {
 }
 
 div[data-theme-boxed-5] {
+    margin: 0 auto;
     width: 5%;
     margin: 0 10px 10px;
     border-left: 0;
