--- a/common/common.scss
+++ b/common/common.scss
@@ -97,7 +97,7 @@ img#site-logo.logo-small {
 }
 
 
-
+/*
 details > summary:first-of-type {
     padding: 5px;
 }
@@ -117,7 +117,7 @@ details button.iframe-expand-btn {
     top: 10px;
     right: 30px;
 }
-
+*/
 
 
 
