--- a/common/common.scss
+++ b/common/common.scss
@@ -37,7 +37,7 @@ img#site-logo.logo-small {
 #post_1 nav.post-controls .actions button.edit {
     position: fixed !important;
     top: 80px !important;
-    right: 0 !important;
+    right: 1em !important;
     background: rgba(0,0,0,0) !important;
     box-shadow: none !important;
     padding: 30px 10px 30px 20px !important;
