--- a/common/common.scss
+++ b/common/common.scss
@@ -276,7 +276,7 @@ div.footnote-tooltip-content .iframe-expand-icon {
 
 .cooked div[data-masonry-gallery], .d-editor-preview div[data-masonry-gallery] {
     clear: both;
-    align-content: center;
+    align-content: center !important;
 }
 
 
