--- a/common/common.scss
+++ b/common/common.scss
@@ -8,6 +8,10 @@ img#site-logo.logo-small {
     box-shadow: 0px 1px 10px 0px rgba(130,130,130,1) !important;
 }
  */
+
+.sidebar-section-wrapper .sidebar-section-content {
+    padding-left: 2em;
+}
 .d-modal.create-account .login-welcome-header {
   padding: 1em !important;
 }
