--- a/common/common.scss
+++ b/common/common.scss
@@ -171,7 +171,9 @@ div.footnote-tooltip-content iframe {
     margin-bottom: -605px;
     width: 1300px;
     height: 800px;
+    transform: scale(0.25);
     -webkit-transform: scale(0.25);
+    transform-origin: 0 0;
     -webkit-transform-origin: 0 0;
     max-width: unset;
 
