--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,29 @@
+/* iframe slide-ins */
+
+div[data-theme-slidein] {
+    overflow:hidden;
+    box-shadow: 0 1.36px 8.896px #c4b59d, 0 0 1px !important;
+    border-radius: 4px;
+    border-top: 10px solid #fff;
+    border-right: 10px solid #fff;
+    border-bottom: 3px solid #fff;
+    padding-top: 30px;
+  }
+  
+  .cooked div[data-theme-slidein] {
+    iframe {
+          box-shadow: none !important;
+    }
+  }
+  
+  div[data-theme-slidein] {
+    iframe {
+          margin: -90px 0 0;
+          height: 440px !important;
+    }
+  }
+
+
 /* Global Tweaks */
 /* 
 img#site-logo.logo-small {
