--- a/common/common.scss
+++ b/common/common.scss
@@ -46,6 +46,7 @@ img#site-logo.logo-small {
     box-shadow: none !important;
     padding: 30px 10px 30px 20px !important;
     margin: 0 0 0 0 !important;
+    z-index: 9999999999 !important;
 }
 #post_1 nav.post-controls .actions button.edit .svg-icon {
     height: 2em !important;
