--- a/common/common.scss
+++ b/common/common.scss
@@ -211,7 +211,7 @@ div.cooked iframe {
 details iframe {
     height: 500px;
     width: -webkit-fill-available !important;
-    width: -moz-available; !important;
+    width: -moz-available !important;
 }
 
 
