--- a/common/common.scss
+++ b/common/common.scss
@@ -44,7 +44,7 @@ img#site-logo.logo-small {
     right: 1em !important;
     background: rgba(0,0,0,0) !important;
     box-shadow: none !important;
-    padding: 30px 10px 30px 20px !important;
+    padding: 1em 0.5em !important;
     margin: 0 0 0 0 !important;
     z-index: 9999 !important;
 }
