--- a/common/common.scss
+++ b/common/common.scss
@@ -1,7 +1,8 @@
 /* Global Tweaks */
 
-.sidebar-footer-actions {
+.sidebar-footer-wrapper {
   width: calc(100% - 2px) !important;
+  bottom: 1px;
 }
 
 /* 
