--- a/common/common.scss
+++ b/common/common.scss
@@ -6,6 +6,10 @@
   bottom: 1px !important;
 }
 
+.sidebar-footer-actions {
+    padding-left: 1px;
+}
+
 /* 
 img#site-logo.logo-small {
     border-radius: 50% !important;
