--- a/common/common.scss
+++ b/common/common.scss
@@ -1,13 +1,7 @@
 /* Global Tweaks */
 
-.sidebar-footer-wrapper {
-  width: calc(100% - 2px) !important;
-  margin: 10px auto !important;
-  bottom: 1px !important;
-}
-
 .sidebar-footer-actions {
-    padding-left: 1px;
+    padding: 10px !important;
 }
 
 /* 
