--- a/common/common.scss
+++ b/common/common.scss
@@ -46,7 +46,7 @@ img#site-logo.logo-small {
 #post_1 nav.post-controls .actions button.edit {
     position: fixed !important;
     top: 65px !important;
-    right: 1em !important;
+    right: 0 !important;
     background: rgba(0,0,0,0) !important;
     box-shadow: none !important;
     padding: 1em 0.5em !important;
