--- a/common/common.scss
+++ b/common/common.scss
@@ -45,8 +45,8 @@ img#site-logo.logo-small {
 /* Move Topic Edit to Top Right Corner Fixed */
 #post_1 nav.post-controls .actions button.edit {
     position: fixed !important;
-    top: 65px !important;
-    right: 0 !important;
+    top: 80px !important;
+    right: 1px !important;
     background: rgba(0,0,0,0) !important;
     box-shadow: none !important;
     padding: 1em 0.5em !important;
